# APP4RS-Milestone2

./: .gitignore  convert_BEN.py  convert_EuroSAT.py  data_BEN.py  data_EuroSAT.py  main.py  pyproject.toml  train.py
